add hugo pipes, postcss, and purgecss

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -163,6 +163,24 @@
       "imports": [
         "public/wp-content/uploads/sass/a3_lazy_load_mixins.less"
       ]
+    },
+    {
+      "path": "src copy/sass/layout/_layout.scss",
+      "imports": [
+        "src copy/sass/layout/_grid.scss",
+        "src copy/sass/layout/_templates.scss"
+      ]
+    },
+    {
+      "path": "assets/sass/variables-site/_variables-site.scss",
+      "imports": [
+        "assets/sass/variables-site/_colors.scss",
+        "assets/sass/variables-site/_chameleon.scss",
+        "assets/sass/variables-site/_typography.scss",
+        "assets/sass/variables-site/_structure.scss",
+        "assets/sass/variables-site/_columns.scss",
+        "assets/sass/variables-site/_cards.scss"
+      ]
     }
   ],
   "projectView": {
