i think i figured out the right way to do article headers, bylines, and ledes

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -181,6 +181,50 @@
         "assets/sass/variables-site/_columns.scss",
         "assets/sass/variables-site/_cards.scss"
       ]
+    },
+    {
+      "path": "assets/sass/style.scss",
+      "imports": [
+        "assets/sass/variables-site/_variables-site.scss",
+        "assets/sass/mixins/_mixins-master.scss",
+        "assets/sass/layout/_layout.scss",
+        "assets/sass/typography/_typography.scss",
+        "assets/sass/elements/_elements.scss",
+        "assets/sass/forms/_forms.scss",
+        "assets/sass/navigation/_navigation.scss",
+        "assets/sass/modules/_accessibility.scss",
+        "assets/sass/modules/_alignments.scss",
+        "assets/sass/site/secondary/_widgets.scss",
+        "assets/sass/site/_site.scss",
+        "assets/sass/media/_media.scss",
+        "assets/sass/modules/_dark-mode.scss",
+        "assets/sass/modules/_serialize.scss",
+        "assets/sass/variables-site/_colors.scss",
+        "assets/sass/variables-site/_chameleon.scss",
+        "assets/sass/variables-site/_typography.scss",
+        "assets/sass/variables-site/_structure.scss",
+        "assets/sass/variables-site/_columns.scss",
+        "assets/sass/variables-site/_cards.scss",
+        "assets/sass/mixins/_toolbox.scss",
+        "assets/sass/layout/_grid.scss",
+        "assets/sass/layout/_templates.scss",
+        "assets/sass/typography/_headings.scss",
+        "assets/sass/typography/_copy.scss",
+        "assets/sass/elements/_lists.scss",
+        "assets/sass/elements/_tables.scss",
+        "assets/sass/elements/_header.scss",
+        "assets/sass/elements/_sidebar.scss",
+        "assets/sass/elements/_footer.scss",
+        "assets/sass/elements/_blocks.scss",
+        "assets/sass/forms/_buttons.scss",
+        "assets/sass/forms/_fields.scss",
+        "assets/sass/navigation/_links.scss",
+        "assets/sass/navigation/_menus.scss",
+        "assets/sass/site/primary/_posts-and-pages.scss",
+        "assets/sass/site/primary/_post-formats.scss",
+        "assets/sass/media/_captions.scss",
+        "assets/sass/media/_galleries.scss"
+      ]
     }
   ],
   "projectView": {
