fix lozad, add polyfill for ie, and remove jquery

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -9,7 +9,7 @@
     },
     {
       "path": "src/js/scripts.js",
-      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"static/scripts-dist.js\",\"sourceMap\":false,\"compiler-concat-js\":{\"enabled\":true},\"compiler-babel\":{\"enabled\":false},\"compiler-uglify-js\":{\"enabled\":true,\"mangle\":true},\"outputSuffix\":\"-dist\"}"
+      "configJson": "{\"autoCompile\":true,\"forceCompile\":false,\"customOutput\":\"static/scripts-dist.js\",\"sourceMap\":false,\"compiler-concat-js\":{\"enabled\":true},\"compiler-babel\":{\"enabled\":true},\"compiler-uglify-js\":{\"enabled\":false,\"mangle\":false},\"outputSuffix\":\"-dist\"}"
     }
   ],
   "fileTree": {
@@ -33,7 +33,6 @@
     {
       "path": "src/js/scripts.js",
       "imports": [
-        "src/js/skip-link-focus-fix.js",
         "src/js/intersection-observer.js",
         "src/js/lozad.min.js"
       ]
@@ -198,7 +197,6 @@
         "assets/sass/site/_site.scss",
         "assets/sass/media/_media.scss",
         "assets/sass/modules/_dark-mode.scss",
-        "assets/sass/modules/_serialize.scss",
         "assets/sass/variables-site/_colors.scss",
         "assets/sass/variables-site/_chameleon.scss",
         "assets/sass/variables-site/_typography.scss",
@@ -233,10 +231,6 @@
   "fileWatcher": {
     "enabled": true,
     "watchedExtensions": [
-      "less",
-      "sass",
-      "scss",
-      "styl",
       "js",
       "jade",
       "haml",
@@ -248,7 +242,6 @@
       "jpeg",
       "ts",
       "pug",
-      "css",
       "php"
     ]
   },
