update baseURL and redirect netlify

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://samkillermannblog.netlify.com/"
+baseURL = "https://www.samkillermann.com/"
 languageCode = "en-us"
 title = "Sam Killermann's Blog"
 enableRobotsTXT = true
