--- a/netlify.toml
+++ b/netlify.toml
@@ -3,7 +3,7 @@
   [headers.values]
     Cache-Control = "public, s-max-age=604800"
 [[headers]]
-  for = "/*.css"
+  for = "/sass/*.css"
   [headers.values]
     Cache-Control = "public, s-max-age=604800"
 [[headers]]
