let people hide the welcome message

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -36,6 +36,193 @@
         "src/js/intersection-observer.js",
         "src/js/lozad.min.js"
       ]
+    },
+    {
+      "path": "src/sass/style.scss",
+      "imports": [
+        "src/sass/variables-site/_variables-site.scss",
+        "src/sass/mixins/_mixins-master.scss",
+        "src/sass/layout/_layout.scss",
+        "src/sass/typography/_typography.scss",
+        "src/sass/elements/_elements.scss",
+        "src/sass/forms/_forms.scss",
+        "src/sass/navigation/_navigation.scss",
+        "src/sass/modules/_accessibility.scss",
+        "src/sass/modules/_alignments.scss",
+        "src/sass/site/secondary/_widgets.scss",
+        "src/sass/site/_site.scss",
+        "src/sass/media/_media.scss",
+        "src/sass/modules/_dark-mode.scss",
+        "src/sass/modules/_serialize.scss",
+        "src/sass/variables-site/_colors.scss",
+        "src/sass/variables-site/_chameleon.scss",
+        "src/sass/variables-site/_typography.scss",
+        "src/sass/variables-site/_structure.scss",
+        "src/sass/variables-site/_columns.scss",
+        "src/sass/variables-site/_cards.scss",
+        "src/sass/mixins/_toolbox.scss",
+        "src/sass/layout/_grid.scss",
+        "src/sass/layout/_templates.scss",
+        "src/sass/typography/_headings.scss",
+        "src/sass/typography/_copy.scss",
+        "src/sass/elements/_lists.scss",
+        "src/sass/elements/_tables.scss",
+        "src/sass/elements/_header.scss",
+        "src/sass/elements/_sidebar.scss",
+        "src/sass/elements/_footer.scss",
+        "src/sass/elements/_blocks.scss",
+        "src/sass/forms/_buttons.scss",
+        "src/sass/forms/_fields.scss",
+        "src/sass/navigation/_links.scss",
+        "src/sass/navigation/_menus.scss",
+        "src/sass/site/primary/_posts-and-pages.scss",
+        "src/sass/site/primary/_post-formats.scss",
+        "src/sass/media/_captions.scss",
+        "src/sass/media/_galleries.scss"
+      ]
+    },
+    {
+      "path": "src/sass/elements/_elements.scss",
+      "imports": [
+        "src/sass/elements/_lists.scss",
+        "src/sass/elements/_tables.scss",
+        "src/sass/elements/_header.scss",
+        "src/sass/elements/_sidebar.scss",
+        "src/sass/elements/_footer.scss",
+        "src/sass/elements/_blocks.scss"
+      ]
+    },
+    {
+      "path": "src/sass/forms/_forms.scss",
+      "imports": [
+        "src/sass/forms/_buttons.scss",
+        "src/sass/forms/_fields.scss"
+      ]
+    },
+    {
+      "path": "src/sass/layout/_layout.scss",
+      "imports": [
+        "src/sass/layout/_grid.scss",
+        "src/sass/layout/_templates.scss"
+      ]
+    },
+    {
+      "path": "src/sass/media/_media.scss",
+      "imports": [
+        "src/sass/media/_captions.scss",
+        "src/sass/media/_galleries.scss"
+      ]
+    },
+    {
+      "path": "src/sass/mixins/_mixins-master.scss",
+      "imports": [
+        "src/sass/mixins/_toolbox.scss"
+      ]
+    },
+    {
+      "path": "src/sass/navigation/_navigation.scss",
+      "imports": [
+        "src/sass/navigation/_links.scss",
+        "src/sass/navigation/_menus.scss"
+      ]
+    },
+    {
+      "path": "src/sass/site/_site.scss",
+      "imports": [
+        "src/sass/site/primary/_posts-and-pages.scss",
+        "src/sass/site/primary/_post-formats.scss"
+      ]
+    },
+    {
+      "path": "src/sass/typography/_typography.scss",
+      "imports": [
+        "src/sass/typography/_headings.scss",
+        "src/sass/typography/_copy.scss"
+      ]
+    },
+    {
+      "path": "src/sass/variables-site/_variables-site.scss",
+      "imports": [
+        "src/sass/variables-site/_colors.scss",
+        "src/sass/variables-site/_chameleon.scss",
+        "src/sass/variables-site/_typography.scss",
+        "src/sass/variables-site/_structure.scss",
+        "src/sass/variables-site/_columns.scss",
+        "src/sass/variables-site/_cards.scss"
+      ]
+    },
+    {
+      "path": "static/wp-content/uploads/sass/a3_lazy_load.less",
+      "imports": [
+        "static/wp-content/uploads/sass/a3_lazy_load_mixins.less"
+      ]
+    },
+    {
+      "path": "public/wp-content/uploads/sass/a3_lazy_load.less",
+      "imports": [
+        "public/wp-content/uploads/sass/a3_lazy_load_mixins.less"
+      ]
+    },
+    {
+      "path": "src copy/sass/layout/_layout.scss",
+      "imports": [
+        "src copy/sass/layout/_grid.scss",
+        "src copy/sass/layout/_templates.scss"
+      ]
+    },
+    {
+      "path": "assets/sass/variables-site/_variables-site.scss",
+      "imports": [
+        "assets/sass/variables-site/_colors.scss",
+        "assets/sass/variables-site/_chameleon.scss",
+        "assets/sass/variables-site/_typography.scss",
+        "assets/sass/variables-site/_structure.scss",
+        "assets/sass/variables-site/_columns.scss",
+        "assets/sass/variables-site/_cards.scss"
+      ]
+    },
+    {
+      "path": "assets/sass/style.scss",
+      "imports": [
+        "assets/sass/variables-site/_variables-site.scss",
+        "assets/sass/mixins/_mixins-master.scss",
+        "assets/sass/layout/_layout.scss",
+        "assets/sass/typography/_typography.scss",
+        "assets/sass/elements/_elements.scss",
+        "assets/sass/forms/_forms.scss",
+        "assets/sass/navigation/_navigation.scss",
+        "assets/sass/modules/_accessibility.scss",
+        "assets/sass/modules/_alignments.scss",
+        "assets/sass/site/secondary/_widgets.scss",
+        "assets/sass/site/_site.scss",
+        "assets/sass/media/_media.scss",
+        "assets/sass/modules/_dark-mode.scss",
+        "assets/sass/variables-site/_colors.scss",
+        "assets/sass/variables-site/_chameleon.scss",
+        "assets/sass/variables-site/_typography.scss",
+        "assets/sass/variables-site/_structure.scss",
+        "assets/sass/variables-site/_columns.scss",
+        "assets/sass/variables-site/_cards.scss",
+        "assets/sass/mixins/_toolbox.scss",
+        "assets/sass/layout/_grid.scss",
+        "assets/sass/layout/_templates.scss",
+        "assets/sass/typography/_headings.scss",
+        "assets/sass/typography/_copy.scss",
+        "assets/sass/elements/_lists.scss",
+        "assets/sass/elements/_tables.scss",
+        "assets/sass/elements/_header.scss",
+        "assets/sass/elements/_sidebar.scss",
+        "assets/sass/elements/_footer.scss",
+        "assets/sass/elements/_blocks.scss",
+        "assets/sass/forms/_buttons.scss",
+        "assets/sass/forms/_fields.scss",
+        "assets/sass/navigation/_links.scss",
+        "assets/sass/navigation/_menus.scss",
+        "assets/sass/site/primary/_posts-and-pages.scss",
+        "assets/sass/site/primary/_post-formats.scss",
+        "assets/sass/media/_captions.scss",
+        "assets/sass/media/_galleries.scss"
+      ]
     }
   ],
   "projectView": {
