don't need that script on every page

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -226,7 +226,7 @@
     }
   ],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
