--- a/content/2020/.Ulysses-Group.plist
+++ b/content/2020/.Ulysses-Group.plist
@@ -8,12 +8,21 @@
 	<dict>
 		<key>childOrder</key>
 		<dict/>
+		<key>sheetClusters</key>
+		<dict/>
 	</dict>
+	<key>sheetClusters</key>
+	<array/>
 	<key>storeFormatVersion</key>
 	<integer>1</integer>
 	<key>versioning</key>
 	<dict>
 		<key>childOrder</key>
+		<dict>
+			<key>738162e516e57df62145ff034c83c4ed3deea7c8762e1a946ba2a93c61ad60f2</key>
+			<integer>1</integer>
+		</dict>
+		<key>sheetClusters</key>
 		<dict>
 			<key>738162e516e57df62145ff034c83c4ed3deea7c8762e1a946ba2a93c61ad60f2</key>
 			<integer>1</integer>
