--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ src/.DS_Store
 content/2020/.DS_Store
 .DS_Store
 content/posts/.DS_Store
+content/2020/.Ulysses-Group.plist
+content/2020/.Ulysses-favorites.plist
