--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ content/2020/.DS_Store
 content/posts/.DS_Store
 content/2020/.Ulysses-Group.plist
 content/2020/.Ulysses-favorites.plist
+content/2020/.Ulysses-favorites.plist
+content/2020/.Ulysses-Group.plist
